--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 
                 <div style="margin-top: 35px; display: flex; gap: 10px; flex-wrap: wrap;">
                     <a href="assets/AliEren_CV.pdf" target="_blank" class="btn" data-lang="about.btn_cv">CV İndir</a>
-                    <a href="https://github.com/ErenRR001" target="_blank" class="btn-icon" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/AliErenKamalioglu" target="_blank" class="btn-icon" title="GitHub"><i class="fa-brands fa-github"></i></a>
                     <a href="https://linkedin.com/in/alierenkamalioglu001" target="_blank" class="btn-icon" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
 
@@ -51,4 +51,5 @@
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
