--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                 <div class="info-row">
                     <div class="label" data-lang="contact.info_social">PROFESYONEL AĞLAR</div>
                     <div class="val" style="display: flex; gap: 15px; font-size: 1.5rem;">
-                        <a href="https://github.com/ErenRR001" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/AliErenKamalioglu" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="https://linkedin.com/in/alierenkamalioglu001" target="_blank" style="color:#0077b5"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
@@ -93,4 +93,5 @@
         });
     </script>
 </body>
+
 </html>
